[gd_scene load_steps=9 format=3 uid="uid://4aisqcd1vdnj"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_nfylj"]
[ext_resource type="Texture2D" uid="uid://bb0whbhnby2tv" path="res://assets/images/backgrounds/splash.webp" id="1_yl0i8"]
[ext_resource type="FontFile" uid="uid://ch04lg81ktlwc" path="res://assets/fonts/softizen/Softizen.ttf" id="2_ec1wa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_peebb"]
texture = ExtResource("1_yl0i8")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w0bn1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b6n1a"]
bg_color = Color(0.511719, 0.511719, 0.511719, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.45)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ou6qv"]
bg_color = Color(0.0820313, 0.0820313, 0.0820313, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.45)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k80we"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.45)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nfylj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_peebb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = 95.0
offset_right = 185.0
offset_bottom = 410.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_w0bn1")
theme_override_styles/hover = SubResource("StyleBoxFlat_b6n1a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ou6qv")
theme_override_styles/normal = SubResource("StyleBoxFlat_k80we")
text = "Start Game"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_w0bn1")
theme_override_styles/hover = SubResource("StyleBoxFlat_b6n1a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ou6qv")
theme_override_styles/normal = SubResource("StyleBoxFlat_k80we")
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_w0bn1")
theme_override_styles/hover = SubResource("StyleBoxFlat_b6n1a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ou6qv")
theme_override_styles/normal = SubResource("StyleBoxFlat_k80we")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -313.0
offset_top = -23.0
offset_right = 313.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.914063, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 16
theme_override_fonts/font = ExtResource("2_ec1wa")
theme_override_font_sizes/font_size = 64
text = "Open Source Pikmin"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
